tests/NormalTests/paczka1/small_fuzzy/98859565.err
Error in line 12: fKnOstJTpO A810 -2,3
Error in line 6: pATUOxhYBx A810 14,2
Error in line 11: 2dLzf A217 89,9
